Añadido pago Nequi y ajustes de registro

--- a/index.html
+++ b/index.html
@@ -140,7 +140,18 @@
                     </select>
                 </div>
 
-                <button type="submit" class="btn btn-primary" style="width: 100%;">ENVIAR SOLICITUD Y PAGAR</button>
+                <!-- Información de Pago Nequi -->
+                <div
+                    style="background: rgba(0, 210, 255, 0.1); border: 1px solid var(--primary); padding: 15px; border-radius: 15px; margin-bottom: 20px;">
+                    <p style="font-size: 0.85rem; margin-bottom: 5px; color: var(--primary); font-weight: bold;">💳
+                        MEDIO DE PAGO NEQUI:</p>
+                    <p style="font-size: 1.1rem; letter-spacing: 1px; color: white;">Nro: <span
+                            style="font-weight: bold;">311 207 8846</span></p>
+                    <p style="font-size: 0.75rem; color: #aaa; margin-top: 5px;">* Realiza la transferencia y adjunta
+                        tus datos. Hernán validará tu pago para darte acceso al curso.</p>
+                </div>
+
+                <button type="submit" class="btn btn-primary" style="width: 100%;">ENVIAR INSCRIPCIÓN</button>
             </form>
         </div>
     </div>
