--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
         <div class="container">
             <img src="logoaitech educacion.webp" alt="Logo" style="height: 40px; margin-bottom: 20px; opacity: 0.7;">
             <p>&copy; 2026 AITech Educación. Todos los derechos reservados.</p>
-            <p style="font-size: 0.8rem; margin-top: 10px; color: #666;">Potenciado por Inteligencia Artificial</p>
+            <p style="font-size: 0.8rem; margin-top: 10px; color: #999;">Creado por <span
+                    style="color: var(--primary); font-weight: 600;">Hernán Rodríguez</span> y potenciado por <span
+                    style="color: var(--secondary); font-weight: 600;">Inteligencia Artificial</span></p>
         </div>
     </footer>
 
